hotfix/JENKINS-47211-for-1-3 * Hot-fix to resolve ResultItem overflow without JDL update (only on 1.3)

--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -122,6 +122,10 @@ main {
     }
 
     .result-item-label {
+        min-width:0;
+    }
+
+    .result-item-label>span {
         display: flex;
         min-width: 0;
 
